mds/领导驾驶舱功能模块逻辑说明.md updated from https://stackedit.cn/

--- a/mds/领导驾驶舱功能模块逻辑说明.md
+++ b/mds/领导驾驶舱功能模块逻辑说明.md
@@ -177,6 +177,7 @@ d_ssqbyth_zdryhgzdxysk（爱科一体化平台重点人信息）
 | daorupici          | varchar   | -1     | 259       | false   |         |
 
 
+[TOC]
 
 ### 目标表：
 
@@ -4198,7 +4199,7 @@ tb_uc_duty_link_person（指令中台）
 | id_number            | varchar   | -1     | 259       | false   | 身份证                                                       |
 | name                 | varchar   | -1     | 259       | false   | 姓名                                                         |
 | phone                | varchar   | -1     | 259       | false   | 联系方式                                                     |
-| imei                 | varchar   | -1     | 259       | false   | IMEI                          
+| imei                 | varchar   | -1     | 259       | false   | IMEI                    
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3ODcyNDI3NzhdfQ==
+eyJoaXN0b3J5IjpbLTI5NjE1MjIxNCwtMTc4NzI0Mjc3OF19
 -->
