mds/指令图谱测试.md updated from https://stackedit.cn/

--- a/mds/指令图谱测试.md
+++ b/mds/指令图谱测试.md
@@ -1,7 +1,118 @@
+---
+title: 2022年12月7日
+---
 
 
 
-> Written with [StackEdit中文版](https://stackedit.cn/).
+
+
+验证图谱数据：
+
+>  以指令关联人员为例
+
+
+
+analyse服务跑完`com.gass.graph.analyse.service.job.impl.CommandAnalyseJob`;
+
+analyse服务跑完`CommandAnalyseJob` `LinkPersonRelationAnalyzeJob`
+
+即可查看临时库是否有数据同步过来；
+
+示例sql:
+
+
+
+# 验证指令是否同步到临时库
+
+
+
+1、随意选择一条已归档的指令，找到其id；
+
+
+
+```
+select *
+from tb_uc_duty_cmd_record
+where id = '3a445f85-436e-47db-a0ba-d54580f3e2c2';
+```
+
+2、验证是否同步指令到临时库指令表；
+
+```
+select * from command c  where node_id ='3a445f85-436e-47db-a0ba-d54580f3e2c2';
+```
+
+
+
+3、找到1中指令的link_person_id，查看指令中台人员基本信息，记住人员id_number；
+
+```
+select *
+from tb_uc_duty_link_person where link_person_id='a1da65a7-83c7-4584-ac6e-18f766adf841';
+```
+
+
+
+4、临时库人员表查看人员是否同步过来，使用3中的id_number；
+
+```
+select * from person p where p.node_id ='410421199909123021';
+```
+
+
+
+5、验证临时库关系表是否生成了关系；
+
+由于验证的是指令关联人员：所以relation表字段如下设置：
+
+start_entity_id:指令id
+
+start_entity_type：固定command
+
+end_entity_id：人员身份证
+
+end_entity_type：固定person
+
+```
+select * from relation r where r.start_entity_id ='3a445f85-436e-47db-a0ba-d54580f3e2c2' 
+
+
+and r.end_entity_id ='410421199909123021' 
+
+and r.start_entity_type='command'
+
+and r.end_entity_type='person'
+```
+
+
+
+# 验证指令是否同步到图谱数据库
+
+
+
+验证指令是否同步过来：nodeId为上述指令id
+
+```
+MATCH (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"}) return start;
+```
+
+验证人员是否同步过来：nodeId为上述身份证号码
+
+```
+MATCH (start:person{nodeId:"410421199909123021"}) return start;
+```
+
+
+
+验证指令人员关系：
+
+```
+
+match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINKPERSON]->(end:person{nodeId:"410421199909123021"})  ) return p
+
+```
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDQwOTA1NjE5XX0=
+eyJoaXN0b3J5IjpbLTg3NjUzNjk2Ml19
 -->
