mds/指令图谱测试.md updated from https://stackedit.cn/

--- a/mds/指令图谱测试.md
+++ b/mds/指令图谱测试.md
@@ -74,8 +74,9 @@ end_entity_id：人员身份证
 end_entity_type：固定person
 
 ```
-select * from relation r where r.start_entity_id ='3a445f85-436e-47db-a0ba-d54580f3e2c2' 
-
+select * from relation r 
+where 
+r.start_entity_id ='3a445f85-436e-47db-a0ba-d54580f3e2c2' 
 
 and r.end_entity_id ='410421199909123021' 
 
@@ -106,6 +107,12 @@ MATCH (start:person{nodeId:"410421199909123021"}) return start;
 
 验证指令人员关系：
 
+由于验证的是指令关联人员：
+
+
+start nodeId指令id
+end  nodeID
+
 ```
 
 match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINKPERSON]->(end:person{nodeId:"410421199909123021"})  ) return p
@@ -114,5 +121,5 @@ match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINK
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg3NjUzNjk2Ml19
+eyJoaXN0b3J5IjpbLTk3MTc4OTI4XX0=
 -->
