mds/指令图谱测试.md updated from https://stackedit.cn/

--- a/mds/指令图谱测试.md
+++ b/mds/指令图谱测试.md
@@ -111,8 +111,8 @@ MATCH (start:person{nodeId:"410421199909123021"}) return start;
 
 
 start nodeId指令id
-end  nodeID
-
+end  nodeId为人员身份证号码
+r:LINKPERSON：指令人员之间的关系编码
 ```
 
 match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINKPERSON]->(end:person{nodeId:"410421199909123021"})  ) return p
@@ -121,5 +121,5 @@ match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINK
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3MTc4OTI4XX0=
+eyJoaXN0b3J5IjpbLTEwMjM0NDIwNDldfQ==
 -->
