mds/指令图谱测试.md updated from https://stackedit.cn/

--- a/mds/指令图谱测试.md
+++ b/mds/指令图谱测试.md
@@ -28,6 +28,7 @@ analyse服务跑完`CommandAnalyseJob` `LinkPersonRelationAnalyzeJob`
 
 1、随意选择一条已归档的指令，找到其id；
 
+![输入图片说明](/imgs/2022-12-07/mhR2MwA2NpJsEzl5.png)
 
 
 ```
@@ -121,5 +122,5 @@ match p=( (start:command{nodeId:"3a445f85-436e-47db-a0ba-d54580f3e2c2"})-[r:LINK
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjM0NDIwNDldfQ==
+eyJoaXN0b3J5IjpbLTQxNjM1MjU3N119
 -->
